--- a/app/views/pages/new_drug_menu.rhtml
+++ b/app/views/pages/new_drug_menu.rhtml
@@ -95,8 +95,8 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Dashboard
-            <small>Control panel</small>
+            New Entry
+            <small>| add new record</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -106,78 +106,45 @@
 
         <!-- Main content -->
         <section class="content">
-          <!-- Small boxes (Stat box) -->
           <div class="row">
-
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="info-box bg-yellow">
-                <span class="info-box-icon"><i class="fa fa-calendar"></i></span>
-                <div class="info-box-content">
-                  <span class="info-box-text"><b>Paracetamol</b></span>
-                  <span class="info-box-number">15/Dec/2016</span>
-                  <div class="progress">
-                    <div style="width: 70%" class="progress-bar"></div>
-                  </div>
-                  <span class="progress-description">
-                    10 days before expiry date
-                  </span>
-                </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
+            <div class="col-md-3">
+              &nbsp;
             </div>
+            <div class="col-md-6">
+              <div class="box box-primary">
+                <div class="box-header with-border">
+                  <h3 class="box-title">New Entry</h3>
+                </div>
+                <!-- /.box-header -->
+                <!-- form start -->
+                <form role="form" action="/admin/create_new_drug" method="POST">
+                  <div class="box-body">
+                    <div class="form-group">
+                      <label for="drugName">Drug Name</label>
+                      <input required type="text" class="form-control" name="drug_name" id="drugName" placeholder="Enter Drug Name"/>
+                    </div>
+                    <div class="form-group">
+                      <label for="batchNo">Batch No</label>
+                      <input required type="text" class="form-control" name="batch_no" id="batchNo" placeholder="Enter Batch No"/>
+                    </div>
+                    <div class="form-group">
+                      <label for="expiryDate">Expiry Date</label>
+                      <input required type="text" class="form-control" name="expiry_date" id="batchNo" placeholder="Enter Expiry date"/>
+                    </div>
 
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="info-box bg-green">
-                <span class="info-box-icon"><i class="fa fa-calendar"></i></span>
-                <div class="info-box-content">
-                  <span class="info-box-text"><b>Quinine</b></span>
-                  <span class="info-box-number">15/Dec/2016</span>
-                  <div class="progress">
-                    <div style="width: 20%" class="progress-bar"></div>
                   </div>
-                  <span class="progress-description">
-                    28 days before expiry date
-                  </span>
-                </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
+                  <!-- /.box-body -->
+
+                  <div class="box-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </form>
+              </div>
             </div>
-
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="info-box bg-red">
-                <span class="info-box-icon"><i class="fa fa-calendar"></i></span>
-                <div class="info-box-content">
-                  <span class="info-box-text"><b>Aspirin</b></span>
-                  <span class="info-box-number">15/Dec/2016</span>
-                  <div class="progress">
-                    <div style="width: 90%" class="progress-bar"></div>
-                  </div>
-                  <span class="progress-description">
-                    10 days before expiry date
-                  </span>
-                </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
-            </div>
-
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="info-box bg-green">
-                <span class="info-box-icon"><i class="fa fa-calendar"></i></span>
-                <div class="info-box-content">
-                  <span class="info-box-text"><b>Brufen</b></span>
-                  <span class="info-box-number">15/Dec/2016</span>
-                  <div class="progress">
-                    <div style="width: 10%" class="progress-bar"></div>
-                  </div>
-                  <span class="progress-description">
-                    50 days before expiry date
-                  </span>
-                </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
+            <div class="col-md-3">
+              &nbsp;
             </div>
           </div>
-          <!-- /.row -->
-          <!-- Main row -->
-
-          <!-- /.row (main row) -->
-
         </section>
         <!-- /.content -->
       </div>
