--- a/app/views/pages/new_drug_menu.rhtml
+++ b/app/views/pages/new_drug_menu.rhtml
@@ -99,7 +99,7 @@
             <small>| add new record</small>
           </h1>
           <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
             <li class="active">Dashboard</li>
           </ol>
         </section>
