--- a/app/views/pages/new_drug_menu.rhtml
+++ b/app/views/pages/new_drug_menu.rhtml
@@ -131,7 +131,10 @@
                       <label for="expiryDate">Expiry Date</label>
                       <input required type="text" class="form-control" name="expiry_date" id="batchNo" placeholder="Enter Expiry date"/>
                     </div>
-
+                    <div class="form-group">
+                      <label>Drug Description</label>
+                      <textarea name="description" placeholder="Enter ..." rows="3" class="form-control"></textarea>
+                    </div>
                   </div>
                   <!-- /.box-body -->
 
