--- a/app/views/pages/new_drug_menu.rhtml
+++ b/app/views/pages/new_drug_menu.rhtml
@@ -128,13 +128,21 @@
                       <input required type="text" class="form-control" name="batch_no" id="batchNo" placeholder="Enter Batch No"/>
                     </div>
                     <div class="form-group">
-                      <label for="expiryDate">Expiry Date</label>
-                      <input required type="text" class="form-control" name="expiry_date" id="batchNo" placeholder="Enter Expiry date"/>
+                      <label>Expiry Date</label>
+
+                      <div class="input-group date">
+                        <div class="input-group-addon">
+                          <i class="fa fa-calendar"></i>
+                        </div>
+                        <input required type="text" id="datepicker" name="expiry_date"  class="form-control pull-right"/>
+                      </div>
+                      <!-- /.input group -->
                     </div>
                     <div class="form-group">
                       <label>Drug Description</label>
                       <textarea name="description" placeholder="Enter ..." rows="3" class="form-control"></textarea>
                     </div>
+                    
                   </div>
                   <!-- /.box-body -->
 
@@ -211,5 +219,8 @@
     <!--<script src="/dist/js/pages/dashboard.js"></script>-->
     <!-- AdminLTE for demo purposes -->
     <script src="/dist/js/demo.js"></script>
+    <script>
+      $('#datepicker').datepicker();
+    </script>
   </body>
 </html>
