Fixed a bug for alternating colors

--- a/app/views/pages/view_drug_menu.rhtml
+++ b/app/views/pages/view_drug_menu.rhtml
@@ -13,7 +13,7 @@ colors_original = ["info", "warning", "success", "danger"]
       <div class="callout callout-<%=color%>">
         <h4><%= drug.name %></h4>
 
-        <p>Description goes here</p>
+        <p><%= drug.description %></p>
       </div>
     </div>
     <div class="col-md-2">
